# rust-hypervisor-firmware

./: .gitignore  Cargo.toml  layout.ld  target.json  trace-cmd-sev.txt
.cargo/: config.toml
src/: boot.rs  bzimage.rs  common.rs  elf.rs  fw_cfg.rs  ghcb.rs  hash.rs  idt.rs  loader.rs  main.rs  paging.rs  pci.rs  pvh.rs
src/asm/: ram32.s
