[package]
name = "hypervisor-fw"
version = "0.4.0"
authors = ["Rob Bradford <robert.bradford@intel.com>"]
edition = "2021"

# Despite "panic-strategy": "abort" being set in target.json, panic = "abort" is
# needed here to make "cargo check" and "cargo clippy" run without errors.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1

[features]
default = ["log-serial", "log-panic"]
# Have the log! macro write to serial output. Disabling this significantly
# reduces code size, but makes debugging essentially impossible
log-serial = []
# Log panics to serial output. Disabling this (without disabling log-serial)
# gets you most of the code size reduction, without losing _all_ debugging.
log-panic = ["log-serial"]

[dependencies]
bitflags = "1.3.2"
x86_64 = "0.14.10"
atomic_refcell = "0.1.8"
uart_16550 = "0.2.18"
digest = "0.10.5"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
dirs = "4.0.0"
rand = "0.8.5"
ssh2 = "0.9.3"
tempfile = "3.3.0"
